<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/men_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_user"
            android:title="@string/profil" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_sekolah"
            android:icon="@drawable/ic_school"
            android:title="@string/tentang" />

        <item
            android:id="@+id/nav_dev"
            android:icon="@drawable/ic_dev"
            android:title="@string/dev" />
    </group>

</menu>