<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".siswa.ui.TabTentang2Fragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Visi"
                android:textColor="@color/hitam"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/visi"
                android:textColor="@color/abuPekat"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Misi"
                android:textColor="@color/hitam"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/misi"
                android:textColor="@color/abuPekat"
                android:textSize="16sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/misi2"
                android:textColor="@color/abuPekat"
                android:textSize="16sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/misi3"
                android:textColor="@color/abuPekat"
                android:textSize="16sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/misi4"
                android:textColor="@color/abuPekat"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>