<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:background="@color/putih"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:textAllCaps="true"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:fontFamily="@font/arvo_bold"
            android:textSize="20sp"
            android:text="@string/sekolah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/nis"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/abuPekat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNomorLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arvo"
                android:inputType="text"
                android:textColor="@color/hitam" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/abuPekat"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arvo"
                android:textColor="@color/hitam"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnMasuk"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/arvo_bold"
            android:text="@string/masuk"
            android:textColor="@color/putih"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>