<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".siswa.ui.DisabilitasActivity">

    <include
        layout="@layout/toolbar_back"/>

    <RelativeLayout
        android:layout_marginTop="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/hitam"
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tunarungu"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/down1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_down"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/down1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/abuPekat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/tunarungu"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/hitam"
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tunawicara"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/down2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_down"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/lay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/down2"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/abuPekat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/tunawicara"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/hitam"
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tunagrahita"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/down3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_down"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/lay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/down3"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/abuPekat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/tunagrahita"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/hitam"
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tunanetra"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/down4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_down"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/lay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/down4"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/abuPekat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_sans_libre_bold"
                android:text="@string/tunanetra"
                android:textSize="14sp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>